refactor: simplify Refund module with clean naming and remove unused DTO